--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=DrTamara
 APP_ENV=local
 APP_KEY=base64:UTB6TnloeEZCNWxkN2g2Q205c3YxMGliWlJpS0JzeWQ=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://edulifeuniversity.com
 
 LOG_CHANNEL=stack
